--- a/index.html
+++ b/index.html
@@ -623,8 +623,8 @@
 </ul>
 
 <div class="nav-right">
-  <a href="../templates/phong.html" class="btn-book">Đặt phòng ngay</a>
-  <a href="../templates/login.html" class="nav-icon">
+  <a href="templates/phong.html" class="btn-book">Đặt phòng ngay</a>
+  <a href="templates/login.html" class="nav-icon">
     <i class="fa-solid fa-user"></i>
   </a>
 </div>
