--- a/index.html
+++ b/index.html
@@ -829,78 +829,76 @@
         </div>
       </div>
     </footer>
- <!-- Container popup -->
-  <div id="livestream-root"></div>
+ <!-- TAILWIND -->
+<script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- React + ReactDOM + Babel -->
-  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<!-- Container popup -->
+<div id="livestream-root"></div>
 
-  <!-- Script React popup -->
-  <script type="text/babel">
-    const { useState } = React;
+<!-- React + ReactDOM + Babel -->
+<script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    function MiniLivestream() {
-      const [isOpen, setIsOpen] = useState(false);
+<!-- Script React popup -->
+<script type="text/babel">
+  const { useState } = React;
 
-      // URL video YouTube nhúng, autoplay + mute để chạy được ngay
-      const videoUrl = "https://www.youtube.com/embed/cmfeMfdYRFs?autoplay=1&mute=1";
+  function MiniLivestream() {
+    const [isOpen, setIsOpen] = useState(false);
 
-      return (
-        <>
-          {/* Nút mở popup */}
-          {!isOpen && (
-            <button
-              onClick={() => setIsOpen(true)}
-              className="fixed bottom-4 right-4 z-50 bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded shadow-lg"
-            >
-              Xem Livestream
-            </button>
-          )}
+    const videoUrl = "https://www.youtube.com/embed/cmfeMfdYRFs?autoplay=1&mute=1";
 
-          {/* Popup mini */}
-          {isOpen && (
-            <div className="fixed bottom-4 right-4 z-50 w-[360px] h-[202px] bg-white rounded shadow-lg overflow-hidden flex flex-col">
-              
-              {/* Header popup */}
-              <div className="flex justify-between items-center bg-red-600 text-white px-2 py-1">
-                <span className="text-xs font-bold uppercase">LIVE</span>
-                <button
-                  onClick={() => setIsOpen(false)}
-                  className="text-white font-bold text-lg leading-none"
-                >
-                  ×
-                </button>
-              </div>
+    return (
+      <>
+        {!isOpen && (
+          <button
+            onClick={() => setIsOpen(true)}
+            className="fixed bottom-4 right-4 z-50 bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded shadow-lg"
+          >
+            Xem Livestream
+          </button>
+        )}
 
-              {/* Video iframe */}
-              <div className="flex-1">
-                <iframe
-                  src={videoUrl}
-                  className="w-full h-full"
-                  frameBorder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  allowFullScreen
-                  allow="autoplay"
-                  title="Livestream"
-                ></iframe>
-              </div>
-
-              {/* Footer popup */}
-              <div
-                className="bg-gray-100 text-xs px-2 py-1 text-gray-700 text-center cursor-pointer"
-                onClick={() => window.location.href = "videohub.html"}
+        {isOpen && (
+          <div className="fixed bottom-4 right-4 z-50 w-[360px] h-[202px] bg-white rounded shadow-lg overflow-hidden flex flex-col">
+            
+            <div className="flex justify-between items-center bg-red-600 text-white px-2 py-1">
+              <span className="text-xs font-bold uppercase">LIVE</span>
+              <button
+                onClick={() => setIsOpen(false)}
+                className="text-white font-bold text-lg leading-none"
               >
-                Xem tất cả Livestream
-              </div>
+                ×
+              </button>
             </div>
-          )}
-        </>
-      );
-    }
 
-    ReactDOM.createRoot(document.getElementById("livestream-root")).render(<MiniLivestream />);
-  </script>
+            <div className="flex-1">
+              <iframe
+                src={videoUrl}
+                className="w-full h-full"
+                frameBorder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowFullScreen
+                allow="autoplay"
+                title="Livestream"
+              ></iframe>
+            </div>
+
+            <div
+              className="bg-gray-100 text-xs px-2 py-1 text-gray-700 text-center cursor-pointer"
+              onClick={() => window.location.href = "videohub.html"}
+            >
+              Xem tất cả Livestream
+            </div>
+          </div>
+        )}
+      </>
+    );
+  }
+
+  ReactDOM.createRoot(document.getElementById("livestream-root")).render(<MiniLivestream />);
+</script>
+
   </body>
 </html>
