--- a/phong.html
+++ b/phong.html
@@ -166,15 +166,15 @@
     <!-- Menu -->
     <ul class="nav-menu">
       <li><a href="index.html" class="nav-link">Trang Chủ</a></li>
-      <li><a href="phong.html" class="nav-link active">Phòng</a></li>
-      <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
-      <li><a href="tintuc.html" class="nav-link">Tin tức</a></li>
-      <li><a href="lienhe.html" class="nav-link">Liên hệ</a></li>
+      <li><a href="templates/phong.html" class="nav-link active">Phòng</a></li>
+      <li><a href="templates/dichvu.html" class="nav-link">Dịch vụ</a></li>
+      <li><a href="templates/tintuc.html" class="nav-link">Tin tức</a></li>
+      <li><a href="templates/lienhe.html" class="nav-link">Liên hệ</a></li>
     </ul>
 
     <!-- Right buttons -->
     <div class="nav-right">
-      <a href="phong.html" class="btn-book">Đặt phòng ngay</a>
+      <a href="templates/phong.html" class="btn-book">Đặt phòng ngay</a>
       <a href="templates/login.html" class="nav-icon">
         <i class="fa-solid fa-user"></i>
       </a>
@@ -582,3 +582,4 @@
 </style>
 </body>
 </html>
+
