--- a/lienhe.html
+++ b/lienhe.html
@@ -35,7 +35,7 @@
 
     <!-- Menu -->
     <ul class="nav-menu">
-      <li><a href="templates/index.html" class="nav-link">Trang Chủ</a></li>
+      <li><a href="index.html" class="nav-link">Trang Chủ</a></li>
       <li><a href="templates/phong.html" class="nav-link">Phòng</a></li>
       <li><a href="templates/dichvu.html" class="nav-link">Dịch vụ</a></li>
       <li><a href="templates/tintuc.html" class="nav-link">Tin tức</a></li>
@@ -474,3 +474,4 @@
 </body>
 
 </html>
+
