--- a/dichvu.html
+++ b/dichvu.html
@@ -28,7 +28,7 @@
 
     <!-- Menu -->
     <ul class="nav-menu">
-      <li><a href="templates/index.html" class="nav-link">Trang Chủ</a></li>
+      <li><a href="index.html" class="nav-link">Trang Chủ</a></li>
       <li><a href="templates/phong.html" class="nav-link">Phòng</a></li>
       <li><a href="templates/dichvu.html" class="nav-link active">Dịch vụ</a></li>
       <li><a href="templates/tintuc.html" class="nav-link">Tin tức</a></li>
@@ -529,3 +529,4 @@
 </body>
 
 </html>
+
