--- a/index.html
+++ b/index.html
@@ -615,10 +615,10 @@
 
 <ul class="nav-menu">
   <li><a href="index.html" class="nav-link active">Trang Chủ</a></li>
-  <li><a href="templates/phong.html" class="nav-link">Phòng</a></li>
-  <li><a href="templates/dichvu.html" class="nav-link">Dịch vụ</a></li>
-  <li><a href="templates/tintuc.html" class="nav-link">Tin tức</a></li>
-  <li><a href="templates/lienhe.html" class="nav-link">Liên hệ</a></li>
+  <li><a href="/phong.html" class="nav-link">Phòng</a></li>
+  <li><a href="/dichvu.html" class="nav-link">Dịch vụ</a></li>
+  <li><a href="/tintuc.html" class="nav-link">Tin tức</a></li>
+  <li><a href="/lienhe.html" class="nav-link">Liên hệ</a></li>
 </ul>
 
 
