--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 
 <ul class="nav-menu">
   <li><a href="index.html" class="nav-link active">Trang Chủ</a></li>
-  <li><a href="/phong.html" class="nav-link">Phòng</a></li>
+  <li><a href="templates/phong.html" class="nav-link">Phòng</a></li>
   <li><a href="/dichvu.html" class="nav-link">Dịch vụ</a></li>
   <li><a href="/tintuc.html" class="nav-link">Tin tức</a></li>
   <li><a href="/lienhe.html" class="nav-link">Liên hệ</a></li>
