--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&display=swap"
+      ="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
@@ -616,9 +616,9 @@
 <ul class="nav-menu">
   <li><a href="index.html" class="nav-link active">Trang Chủ</a></li>
   <li><a href="templates/phong.html" class="nav-link">Phòng</a></li>
-  <li><a href="/dichvu.html" class="nav-link">Dịch vụ</a></li>
-  <li><a href="/tintuc.html" class="nav-link">Tin tức</a></li>
-  <li><a href="/lienhe.html" class="nav-link">Liên hệ</a></li>
+  <li><a href="templates/dichvu.html" class="nav-link">Dịch vụ</a></li>
+  <li><a href="templates/tintuc.html" class="nav-link">Tin tức</a></li>
+  <li><a href="templates/lienhe.html" class="nav-link">Liên hệ</a></li>
 </ul>
 
 
