--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 
           <div class="hero-buttons">
             <a href="#" class="btn btn-primary">Khám phá ngay</a>
-            <a href="#" class="btn btn-secondary">Xem video</a>
+            <a href='templates/videohub.html" class="btn btn-secondary">Xem video</a>
           </div>
         </div>
       </div>
