--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
           <p class="hero-subtitle">Trải nghiệm sang trọng, dịch vụ hoàn hảo</p>
 
           <div class="hero-buttons">
-            <a href="#" class="btn btn-primary">Khám phá ngay</a>
+            <a href="templates/phong.html" class="btn btn-primary">Khám phá ngay</a>
             <a href='templates/videohub.html" class="btn btn-secondary">Xem video</a>
           </div>
         </div>
